# diabetes-detection

./: .gitignore  CMakeLists.txt  README.md  diabetes-detection.c  model_data.h  tinyml.cpp  tinyml.h
ScriptColab/: main.py
